@@ -11,6 +11,7 @@ Performance improvements
 
 - ParallelCol: reducing the amount of redundant transactions in case of multiple parallel integer columns
 - Probing: checks the time limit condition before propagating a variable
+- Probing: introduce new parameter to cap the bagdesize
 - SequentialMode: execute functions like trivialPresolve only once per round and not after every presolver
 
 Interface changes
@@ -18,7 +19,11 @@ Interface changes
 ### Deleted and changed API methods
 ### New API functions
 ### Changed parameters
+
 ### New parameters with default values
+
+- probing.maxbadgesize = -1 : maximal number of probing candidates probed in a single badge of candidates (-1 deactivated)
+
 ### Data structures
 
 Unit tests
